# code-coverage-test

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  Readme.md  build.sh  coverage.cpp  coveralls.sh
cmake/: Coveralls.cmake
include/: calculator.hpp
lib/src/: CMakeLists.txt  calculator.cpp
scripts/: coveralls.sh.in
src/: calculator.cpp
test/: CMakeLists.txt  test_calc.cpp
